tests/error/type_match/base_case_tuple_mismatched_elem_count1.bz
function test()
{
	let _: [int32, float64] = [int32, float64, str]();
}
